Fixed header spacing

--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -190,7 +190,7 @@ h1, h2, h3, h4, h5, h6 {
 @media (min-width: 768px) {
   header {
     margin: 0 auto;
-    padding-top: 20px;
+    padding-top: 50px;
     width: 80%;
   }
   footer {
